fix:home- text overflow whenever text gets long

--- a/src/Assets/Styles/card.css
+++ b/src/Assets/Styles/card.css
@@ -3,7 +3,10 @@
     border: 1px solid var(--color-bg-variant);
     border-radius: 10px;
 
+    display: flex;
+    flex-direction: column;
     height: 100%;
+    overflow: hidden;
 }
 
 .card-header {
@@ -12,11 +15,17 @@
 }
 
 .card-main {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     height: calc(100% - 67px);
+}
+
+.card .card-title {
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .card h2,
@@ -32,6 +41,8 @@
 .card .card-content {
     margin: 10px 0;
     white-space: pre-wrap;
+
+    overflow: auto;
 }
 
 .card-comments-container {
